Fix spacing on event info box on Show Event

--- a/app/assets/stylesheets/_custom.scss
+++ b/app/assets/stylesheets/_custom.scss
@@ -37,10 +37,6 @@ a.prominent {
   font-weight: $font-weight-bold;
 }
 
-.event-info a {
-  text-decoration: underline;
-}
-
 /* typography */
 
 h1, h2, h3, h4, h5, h6 {
